@@ -11,12 +11,10 @@
 <pre>
 LilyPond - Music Notation for Everyone.
 
-LilyPond creates beautiful music notation.  It is open source/free
-software, and is available for all popular operating systems.  It runs
-on most Unix flavors -- including Linux and MacOS X -- and Microsoft
-Windows.
 
-LilyPond is now truly for everyone.
+
+LilyPond is a free/open source package to create beautiful music
+notation.  With version 2.6, LilyPond is now truly for everyone.
 
 - For every platform
 
